--- a/AngularMvcProject/AngularMvcProject.csproj
+++ b/AngularMvcProject/AngularMvcProject.csproj
@@ -217,7 +217,9 @@
     <Content Include="App\controller\SignUp.js" />
     <Content Include="App\controller\wizard.js" />
     <Content Include="App\View\Customer\customer.html" />
+    <Content Include="Content\Assets\css\angularjs-datetime-picker.css" />
     <Content Include="Content\Assets\images\service-icon-big.png" />
+    <Content Include="Content\Assets\js\angularjs-datetime-picker.min.js" />
     <Content Include="Content\Assets\js\bootstrap-datetimepicker.min.js" />
     <Content Include="Content\Assets\js\moment.js" />
     <Content Include="Index.html" />
