--- a/AngularMvcProject/AngularMvcProject.csproj
+++ b/AngularMvcProject/AngularMvcProject.csproj
@@ -214,9 +214,13 @@
     <Content Include="App\controller\Customer.js" />
     <Content Include="App\controller\dashboard.js" />
     <Content Include="App\controller\routing.js" />
+    <Content Include="App\controller\Services.js" />
+    <Content Include="App\controller\Staff.js" />
     <Content Include="App\controller\SignUp.js" />
     <Content Include="App\controller\wizard.js" />
     <Content Include="App\View\Customer\customer.html" />
+    <Content Include="App\View\Setting\Services.html" />
+    <Content Include="App\View\Setting\Staff.html" />
     <Content Include="Content\Assets\css\angularjs-datetime-picker.css" />
     <Content Include="Content\Assets\images\service-icon-big.png" />
     <Content Include="Content\Assets\js\angularjs-datetime-picker.min.js" />
