--- a/AngularMvcProject/AngularMvcProject.csproj
+++ b/AngularMvcProject/AngularMvcProject.csproj
@@ -223,6 +223,7 @@
     <Content Include="App\View\Setting\Services.html" />
     <Content Include="App\View\Setting\Staff.html" />
     <Content Include="Content\Assets\css\angularjs-datetime-picker.css" />
+    <Content Include="Content\Assets\images\drag-drop-bg.png" />
     <Content Include="Content\Assets\images\service-icon-big.png" />
     <Content Include="Content\Assets\js\angularjs-datetime-picker.min.js" />
     <Content Include="Content\Assets\js\bootstrap-datetimepicker.min.js" />
