--- a/AngularMvcProject/Web.config
+++ b/AngularMvcProject/Web.config
@@ -16,6 +16,7 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="DomainUrl" value="http://bookingmanager18-001-site1.itempurl.com"/>
   </appSettings>
   <system.web>
     <authentication mode="None" />
