--- a/AngularMvcProject/Web.config
+++ b/AngularMvcProject/Web.config
@@ -18,7 +18,9 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="DomainUrl" value="http://bookingmanager18-001-site1.itempurl.com"/>
   </appSettings>
+  
   <system.web>
+    <globalization uiCulture="en" culture="en-GB" />
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
