--- a/AngularMvcProject/bin/AngularMvcProject.dll.config
+++ b/AngularMvcProject/bin/AngularMvcProject.dll.config
@@ -16,8 +16,11 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="DomainUrl" value="http://localhost:5590"/>
   </appSettings>
+  
   <system.web>
+    <globalization uiCulture="en" culture="en-GB" />
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
