--- a/AngularMvcProject/Web.config
+++ b/AngularMvcProject/Web.config
@@ -16,10 +16,12 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="DomainUrl" value="http://bookingmanager18-001-site1.itempurl.com"/>
+    <add key="DomainUrl" value="http://bookingmanager18-001-site1.itempurl.com" />
+    <!--<add key="DomainUrl" value="http://localhost:5590"/>-->
   </appSettings>
   
   <system.web>
+     <customErrors mode="Off" />
     <globalization uiCulture="en" culture="en-GB" />
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5.2" />
@@ -90,10 +92,4 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-  <system.codedom>
-    <compilers>
-      <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:6 /nowarn:1659;1699;1701" />
-      <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
-    </compilers>
-  </system.codedom>
 </configuration>
