--- a/AngularMvcProject/AngularMvcProject.csproj
+++ b/AngularMvcProject/AngularMvcProject.csproj
@@ -220,13 +220,16 @@
     <Content Include="App\View\Setting\Services.html" />
     <Content Include="App\View\Setting\Staff.html" />
     <Content Include="Content\Assets\css\angularjs-datetime-picker.css" />
+    <Content Include="Content\Assets\css\trix.css" />
     <Content Include="Content\Assets\images\drag-drop-bg.png" />
     <Content Include="Content\Assets\images\glyphicons-halflings.png" />
     <Content Include="Content\Assets\images\loading.gif" />
     <Content Include="Content\Assets\images\service-icon-big.png" />
+    <Content Include="Content\Assets\js\angular-trix.js" />
     <Content Include="Content\Assets\js\angularjs-datetime-picker.min.js" />
     <Content Include="Content\Assets\js\bootstrap-datetimepicker.min.js" />
     <Content Include="Content\Assets\js\moment.js" />
+    <Content Include="Content\Assets\js\trix.js" />
     <Content Include="Content\Assets\js\ui-bootstrap-tpls-0.5.0.js" />
     <Content Include="Content\dx.common.css" />
     <Content Include="Content\dx.dark.css" />
