--- a/AngularMvcProject/AngularMvcProject.csproj
+++ b/AngularMvcProject/AngularMvcProject.csproj
@@ -193,6 +193,7 @@
     <Compile Include="Controllers\CalendarController.cs" />
     <Compile Include="Controllers\CustomerController.cs" />
     <Compile Include="Controllers\dashboardController.cs" />
+    <Compile Include="Controllers\ReportController.cs" />
     <Compile Include="Controllers\ServicesController.cs" />
     <Compile Include="Controllers\SignInController.cs" />
     <Compile Include="Controllers\SignUpController.cs" />
@@ -210,9 +211,13 @@
   <ItemGroup>
     <Content Include="App\controller\app.js" />
     <Content Include="App\controller\app.module.js" />
+    <Content Include="App\controller\BuisnessReports.js" />
     <Content Include="App\controller\Calendar.js" />
     <Content Include="App\controller\Customer.js" />
+    <Content Include="App\controller\CustomerReports.js" />
     <Content Include="App\controller\dashboard.js" />
+    <Content Include="App\controller\ResourceReports.js" />
+    <Content Include="App\controller\ServiceReports.js" />
     <Content Include="App\controller\Services.js" />
     <Content Include="App\controller\SignIn.js" />
     <Content Include="App\controller\Staff.js" />
@@ -220,14 +225,20 @@
     <Content Include="App\controller\wizard.js" />
     <Content Include="App\View\Calendar\Calendar.html" />
     <Content Include="App\View\Customer\customer.html" />
+    <Content Include="App\View\Reports\BuisnessReports.html" />
+    <Content Include="App\View\Reports\CustomerReports.html" />
+    <Content Include="App\View\Reports\ResourceReports.html" />
+    <Content Include="App\View\Reports\ServiceReports.html" />
     <Content Include="App\View\Setting\Services.html" />
     <Content Include="App\View\Setting\Staff.html" />
     <Content Include="Content\Assets\css\angularjs-datetime-picker.css" />
     <Content Include="Content\Assets\css\trix.css" />
     <Content Include="Content\Assets\images\drag-drop-bg.png" />
     <Content Include="Content\Assets\images\glyphicons-halflings.png" />
+    <Content Include="Content\Assets\images\loader.gif" />
     <Content Include="Content\Assets\images\loading.gif" />
     <Content Include="Content\Assets\images\service-icon-big.png" />
+    <Content Include="Content\Assets\images\tenor.gif" />
     <Content Include="Content\Assets\js\angular-trix.js" />
     <Content Include="Content\Assets\js\angularjs-datetime-picker.min.js" />
     <Content Include="Content\Assets\js\bootstrap-datetimepicker.min.js" />
@@ -394,6 +405,7 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Views\Calendar\" />
+    <Folder Include="Views\Report\" />
     <Folder Include="Views\Services\" />
     <Folder Include="Views\Shared\" />
     <Folder Include="Views\Staff\" />
