--- a/AngularMvcProject/AngularMvcProject.csproj
+++ b/AngularMvcProject/AngularMvcProject.csproj
@@ -240,6 +240,7 @@
     <Content Include="Content\Assets\images\loading %281%29.gif" />
     <Content Include="Content\Assets\images\loading.gif" />
     <Content Include="Content\Assets\images\service-icon-big.png" />
+    <Content Include="Content\Assets\images\sort-down.png" />
     <Content Include="Content\Assets\images\tenor.gif" />
     <Content Include="Content\Assets\js\angular-trix.js" />
     <Content Include="Content\Assets\js\angularjs-datetime-picker.min.js" />
