--- a/AngularMvcProject/AngularMvcProject.csproj
+++ b/AngularMvcProject/AngularMvcProject.csproj
@@ -231,6 +231,7 @@
     <Content Include="App\View\Reports\ServiceReports.html" />
     <Content Include="App\View\Setting\Services.html" />
     <Content Include="App\View\Setting\Staff.html" />
+    <Content Include="Content\Assets\css\angular-tooltips.css" />
     <Content Include="Content\Assets\css\angularjs-datetime-picker.css" />
     <Content Include="Content\Assets\css\trix.css" />
     <Content Include="Content\Assets\images\drag-drop-bg.png" />
