--- a/AngularMvcProject/AngularMvcProject.csproj
+++ b/AngularMvcProject/AngularMvcProject.csproj
@@ -289,6 +289,7 @@
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <Content Include="Scripts\angular-sanitize.min.js" />
+    <Content Include="Scripts\angular-tooltips.min.js" />
     <Content Include="Scripts\angularUiCalendar\calendar.js" />
     <Content Include="Scripts\angularUiCalendar\gcal.js" />
     <Content Include="Scripts\bootstrap.js" />
