--- a/AngularMvcProject/AngularMvcProject.csproj
+++ b/AngularMvcProject/AngularMvcProject.csproj
@@ -314,10 +314,6 @@
     <Content Include="Scripts\dx.all.js" />
     <Content Include="Scripts\fullcalendar.js" />
     <Content Include="Scripts\fullcalendar.min.js" />
-    <Content Include="Scripts\fullcalendar\fullcalendaroldversion.js" />
-    <Content Include="Scripts\fullcalendar\fullcalendaroldversion.min.js" />
-    <Content Include="Scripts\fullcalendar\gcaloldversion.js" />
-    <Content Include="Scripts\fullcalendar\gcaloldversion.min.js" />
     <Content Include="Scripts\fullcalendar\locale-all.js" />
     <Content Include="Scripts\fullcalendar\locale\af.js" />
     <Content Include="Scripts\fullcalendar\locale\ar-dz.js" />
@@ -387,7 +383,6 @@
     <Content Include="Scripts\fullcalendar\locale\zh-cn.js" />
     <Content Include="Scripts\fullcalendar\locale\zh-tw.js" />
     <Content Include="Scripts\gcal.js" />
-    <Content Include="Scripts\globalize.min.js" />
     <None Include="Scripts\jquery-2.0.0.intellisense.js" />
     <Content Include="Scripts\jquery-2.0.0.js" />
     <Content Include="Scripts\jquery-2.0.0.min.js" />
@@ -406,7 +401,9 @@
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\_references.js" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
