Changes related to Calendar section

--- a/AngularMvcProject/Web.config
+++ b/AngularMvcProject/Web.config
@@ -16,7 +16,7 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="DomainUrl" value="http://bookingmanager20-001-site1.btempurl.com" />
+    <add key="DomainUrl" value="http://bookingmanager24-001-site1.ftempurl.com" />
     <!--<add key="DomainUrl" value="http://localhost:5590"/>-->
   </appSettings>
   
